fix jump bg v9

--- a/src/App.css
+++ b/src/App.css
@@ -77,14 +77,16 @@
 
 .backgroundBlur {
   position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: -20%;
+  left: -20%;
+  right: -20%;
+  bottom: -20%;
+  /* width: 100%;
+  height: 100%; */
   transition: 1s;
   /* background: #edededc7; */
   /* background: radial-gradient(#ededede3 50%, transparent); */
-  background: linear-gradient(125deg, #edededde 50%, transparent 125%);
+  background: linear-gradient(125deg, #edededeb 50%, #00000000 100%);
 }
 
 @media screen and (max-width: 450px) {
